--- a/EmployeeAccessSystem/Views/Home/Index.cshtml
+++ b/EmployeeAccessSystem/Views/Home/Index.cshtml
@@ -1,9 +1,10 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Http
+@{
     ViewData["Title"] = "";
+    var isLoggedIn = Context.Session.GetInt32("AccountId") != null;
 }
 
 <div class="container-fluid">
-
 
     <div class="row mb-4">
         <div class="col">
@@ -14,36 +15,38 @@
         </div>
     </div>
 
+    @if (!isLoggedIn)
+    {
+        <div class="row justify-content-center">
+            <div class="col-lg-6">
 
-    <div class="row justify-content-center">
-        <div class="col-lg-6">
+                <div class="card shadow-sm">
+                    <div class="card-body p-4 text-center">
 
-            <div class="card shadow-sm">
-                <div class="card-body p-4 text-center">
+                        <h4 class="mb-3">Get Started</h4>
 
-                    <h4 class="mb-3">Get Started</h4>
+                        <p class="text-muted mb-4">
+                            Please login if you already have an account,
+                            or register to create a new one.
+                        </p>
 
-                    <p class="text-muted mb-4">
-                        Please login if you already have an account,
-                        or register to create a new one.
-                    </p>
+                        <div class="d-flex justify-content-center gap-3">
+                            <a asp-controller="Account" asp-action="Login"
+                               class="btn btn-primary px-4">
+                                Login
+                            </a>
 
-                    <div class="d-flex justify-content-center gap-3">
-                        <a asp-controller="Account" asp-action="Login"
-                           class="btn btn-primary px-4">
-                            Login
-                        </a>
+                            <a asp-controller="Account" asp-action="Register"
+                               class="btn btn-outline-secondary px-4">
+                                Register
+                            </a>
+                        </div>
 
-                        <a asp-controller="Account" asp-action="Register"
-                           class="btn btn-outline-secondary px-4">
-                            Register
-                        </a>
                     </div>
-
                 </div>
-            </div>
 
+            </div>
         </div>
-    </div>
+    }
 
 </div>
