--- a/EmployeeAccessSystem/Views/Shared/_Layout.cshtml
+++ b/EmployeeAccessSystem/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http
+@{
+    var isLoggedIn = Context.Session.GetInt32("AccountId") != null;
+}
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -17,7 +22,9 @@
 <body class="hold-transition sidebar-mini">
     <div class="wrapper">
 
+        <!-- NAVBAR -->
         <nav class="main-header navbar navbar-expand navbar-white navbar-light">
+
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" data-widget="pushmenu" href="#" role="button">
@@ -28,20 +35,36 @@
                 <li class="nav-item d-none d-sm-inline-block">
                     <a asp-controller="Home" asp-action="Index" class="nav-link">Home</a>
                 </li>
+
                 <li class="nav-item d-none d-sm-inline-block">
                     <a asp-controller="Home" asp-action="Privacy" class="nav-link">Privacy</a>
                 </li>
             </ul>
 
+           
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" asp-controller="Employee" asp-action="Index" title="Employees">
-                        <i class="fas fa-users"></i>
-                    </a>
-                </li>
+                @* @if (!isLoggedIn)
+                {
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Account" asp-action="Login">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Account" asp-action="Register">Register</a>
+                    </li>
+                }
+                else
+                { *@
+                    <li class="nav-item">
+                        <a class="nav-link text-danger" asp-controller="Account" asp-action="Logout" title="Logout">
+                            <i class="fas fa-sign-out-alt"></i>
+                        </a>
+                    </li>
+                
             </ul>
+
         </nav>
 
+        <!-- SIDEBAR -->
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <a asp-controller="Home" asp-action="Index" class="brand-link">
                 <img src="~/adminlte/dist/img/AdminLTELogo.png"
@@ -53,8 +76,12 @@
 
             <div class="sidebar">
                 <nav class="mt-2">
-                    <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+                    <ul class="nav nav-pills nav-sidebar flex-column"
+                        data-widget="treeview"
+                        role="menu"
+                        data-accordion="false">
 
+                        <!-- ✅ Home in sidebar -->
                         <li class="nav-item">
                             <a asp-controller="Home" asp-action="Index" class="nav-link">
                                 <i class="nav-icon fas fa-home"></i>
@@ -88,6 +115,7 @@
             </div>
         </aside>
 
+       
         <div class="content-wrapper">
 
             <div class="content-header">
@@ -117,6 +145,7 @@
                 <b>AdminLTE</b> 3.2.0
             </div>
         </footer>
+
     </div>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
